# Casaeval

./: README.md  pyproject.toml  setup.py
Testing/: Testing_notebook.html  Testing_notebook.ipynb
casaeval/: casaeval_main.py
casaeval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
casaeval/.ipynb_checkpoints/: casaeval_main-checkpoint.py
casaeval/automation/.ipynb_checkpoints/: SLURMscripter-checkpoint.py
casaeval/evaluation/: evaluate.py  prediction_evaluation.py
casaeval/evaluation/.ipynb_checkpoints/: prediction_evaluation copy-checkpoint.py  prediction_evaluation-checkpoint.py
casaeval/processing/: prediction_writer.py  raw_data_conversion.py
casaeval/processing/.ipynb_checkpoints/: raw_data_conversion-checkpoint.py
