[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "casaeval"
version = "0.0.1"
authors = [
    {name = "Philipp Trinh", email = "trinh.philipp@hotmail.com"},
]
description = "Data Preparation and Result Evaluation for casanovo: A de novo mass spectrometry peptide sequencing transformer model"
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "timsrust_pyo3",
    "pyteomics",
    "click",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "spectrum_utils"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/Kactaceapengu/casaeval"

[project.scripts]
casaeval = "casaeval.casaeval_main:main"

[tool.setuptools]
include-package-data = true
